--- a/templates/participation/index.html.twig
+++ b/templates/participation/index.html.twig
@@ -8,23 +8,26 @@
 {% endblock %}
 
 {% block body %}
-<!-- ======= Header ======= -->
-    {% block header %}
-        {{ parent() }}
-    {% endblock %}
-<!-- ======= End Header ======= -->
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
+    <!-- ======= Header ======= -->
+        {% block header %}
+            {{ parent() }}
+        {% endblock %}
+    <!-- ======= End Header ======= -->
+    <style>
+        .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
+        .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
+    </style>
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
+    <div class="example-wrapper">
+        <h1>Hello {{ controller_name }}! ✅</h1>
 
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ 'C:/wamp64/www/seoCours/src/Controller/ParticipationController.php'|file_link(0) }}">src/Controller/ParticipationController.php</a></code></li>
-        <li>Your template at <code><a href="{{ 'C:/wamp64/www/seoCours/templates/participation/index.html.twig'|file_link(0) }}">templates/participation/index.html.twig</a></code></li>
-    </ul>
-</div>
+        This friendly message is coming from:
+        <ul>
+            <li>Your controller at <code><a href="{{ 'C:/wamp64/www/seoCours/src/Controller/ParticipationController.php'|file_link(0) }}">src/Controller/ParticipationController.php</a></code></li>
+            <li>Your template at <code><a href="{{ 'C:/wamp64/www/seoCours/templates/participation/index.html.twig'|file_link(0) }}">templates/participation/index.html.twig</a></code></li>
+        </ul>
+    </div>
+    {{ include('_footer.html.twig') }}
+    <div id="preloader"></div>
+    <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 {% endblock %}
