update meta tags for seo

--- a/templates/blog/index.html.twig
+++ b/templates/blog/index.html.twig
@@ -1,9 +1,10 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello BlogController!{% endblock %}
+{% block title %}{{controller_name}}{% endblock %}
 {% block head %}
 <meta name="robots" content="follow, index">
-<meta name="description" content="Est dolorum ut non facere possimus quibusdam eligendi voluptatem. Quia id aut similique quia voluptas sit quaerat debitis.">
+<meta name="keywords" content="thé bio, thé bio et handmade, blog, actualités, tendances">
+<meta name="description" content="Découvrez toutes les dernières actualités et tendances du monde du thé bio et handmade sur notre blog. Restez informé et ne manquez aucun article !">
 {% endblock %}
 
 {% block body %}
