--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -1,10 +1,10 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello HomeController!{% endblock %}
+{% block title %}{{controller_name}}{% endblock %}
 {% block head %}
 <meta name="robots" content="follow, index">
-<meta name="keywords" content="Mot-clé 1, Mot-clé 2, Mot-clé 3">
-<meta name="description" content="Est dolorum ut non facere possimus quibusdam eligendi voluptatem. Quia id aut similique quia voluptas sit quaerat debitis.">
+<meta name="keywords" content="thé bio, thé bio et handmade, jeu concours, cadeaux, boutique en ligne, tirage au sort, detox">
+<meta name="description" content="Bienvenue sur notre site dédié au thé bio et handmade ! Profitez de nos produits de qualité et participez à notre jeu concours pour tenter de remporter de nombreux cadeaux.">
 {% endblock %}
 
 {% block body %}
