--- a/templates/participation/index.html.twig
+++ b/templates/participation/index.html.twig
@@ -4,7 +4,7 @@
 {% block head %}
 <meta name="robots" content="follow, index">
 <meta name="keywords" content="Mot-clé 1, Mot-clé 2, Mot-clé 3">
-<meta name="description" content="Est dolorum ut non facere possimus quibusdam eligendi voluptatem. Quia id aut similique quia voluptas sit quaerat debitis.">
+<meta name="description" content="Participez à notre jeu concours et tentez de remporter de nombreux cadeaux en rapport avec le monde du thé bio et handmade. Inscrivez-vous maintenant !">
 {% endblock %}
 
 {% block body %}
