--- a/templates/contact/index.html.twig
+++ b/templates/contact/index.html.twig
@@ -1,10 +1,11 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Contact{% endblock %}
+{% block title %}{{controller_name}}{% endblock %}
 
 {% block head %}
 <meta name="robots" content="follow, index">
-<meta name="description" content="Est dolorum ut non facere possimus quibusdam eligendi voluptatem. Quia id aut similique quia voluptas sit quaerat debitis.">
+<meta name="keywords" content="thé bio, thé bio et handmade, jeu concours, cadeaux, contact, questions, remarques">
+<meta name="description" content="Vous avez des questions ou des remarques à nous faire par rapport à notre jeux concours ? N'hésitez pas à nous contacter ! Nous sommes à votre disposition pour répondre a toutes vos questions.">
 {% endblock %}
 
 {% block body %}
